--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -22,6 +22,8 @@
   },
   "scripts": {
     "compile": "npx hardhat compile",
-    "test": "npx hardhat test"
+    "run:script":"npx hardhat run scripts/run.js",
+    "test": "npx hardhat test",
+    "deploy": "npx hardhat run scripts/deploy.js --network mumbai" 
   }
 }
