--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -24,6 +24,7 @@
     "compile": "npx hardhat compile",
     "run:script":"npx hardhat run scripts/run.js",
     "test": "npx hardhat test",
-    "deploy": "npx hardhat run scripts/deploy.js --network mumbai" 
+    "deploy": "npx hardhat run scripts/deploy.js --network mumbai" ,
+    "verify": "npx hardhat verify --network mumbai $DEPLOYED_CONTRACT_ADDRESS $TLD $TOKEN_NAME $TOKEN_SYMBOL"
   }
 }
